Completed segment refactoring